--- a/app/src/main/res/layout/attached_image.xml
+++ b/app/src/main/res/layout/attached_image.xml
@@ -14,7 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:id="@+id/attached_image"
-        android:src="@mipmap/ic_add_img"/>
+        android:id="@+id/attached_image"/>
 
 </LinearLayout>
