--- a/app/src/main/res/layout/activity_memo_read.xml
+++ b/app/src/main/res/layout/activity_memo_read.xml
@@ -1,59 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MemoEditActivity"
-    android:orientation="vertical"
-    android:id="@+id/read_page_layout">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        tools:context=".MemoEditActivity"
+        android:orientation="vertical"
+        android:id="@+id/read_page_layout">
 
-        <TextView
-            android:text="제목 : "
-            android:textSize="20sp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"/>
-
-        <TextView
-            android:id="@+id/textView_subject"
-            android:textSize="20sp"
-            android:gravity="center_vertical"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:importantForAutofill="no" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="내용 : "
-            android:textSize="20sp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="start|top"/>
-
-        <LinearLayout
-            android:id="@+id/content_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-    </LinearLayout>
-</LinearLayout>
+    </RelativeLayout>
+</ScrollView>
