--- a/app/src/main/res/layout/activity_memo_read.xml
+++ b/app/src/main/res/layout/activity_memo_read.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MemoEditActivity"
+        tools:context=".EditMemo.MemoEditActivity"
         android:orientation="vertical"
         android:id="@+id/read_page_layout">
 
